--- a/bbsittingsharing/templates/bbsittingsharing/parent_detail.html
+++ b/bbsittingsharing/templates/bbsittingsharing/parent_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% load staticfiles %}
 
 {% block content %}
 {% with parent|default:user as profile %}
@@ -9,19 +10,59 @@
     <a class="btn" href="{% url 'calendar' %}">{% trans "Calendar" %}</a>
     <a class="btn" href="{% url 'refer' %}">{% trans "Refer" %}</a>
 </div>
+
+<div class="col-sm-7 panel planning">
+    <h3>
+        <img class="calendar-icon" src="{% static 'calendar.png' %}">
+        {% trans "Your planned babysittings" %}
+    </h3>
+    {% for bbsitting in profile.bbsitting_set.all %}
+        <p><a href="{% url 'detail' bbsitting.pk %}">{{bbsitting}}</a></p>
+    {% endfor %}
+    {% comment %}<input id="searchdate"/>
+    <button class="btn panelbtn" onclick="document.location = '/search/'+document.getElementById('searchdate').value">{% trans 'Search' %}</button>{% endcomment %}
+    <a class="btn panelbtn" href="{% url 'calendar' %}">{% trans "Calendar" %}</a>
+    <a class="btn panelbtn pull-right" href="{% url 'new' %}">{% trans "Propose a date" %}</a>
+</div>
 {% endif %}
+<div class="col-sm-5 pull-right">
+    <div class="panel">
+        <img class="profile" alt="{% blocktrans with name=profile.get_full_name%}{{name}}'s picture{% endblocktrans %} '" src="{{profile.picture.url}}" />
+    </div>
+
+    {% if profile == user %}
+    <div class="panel">
+        <h3>{% trans "My group" %}</h3>
+        {% for user in user.friends.all|slice:":4" %}
+        <div class="userlist pull-left">
+            <a href="{% url 'profile' user.email %}">
+                <img class="userthumb" src="{{user.picture.url}}" alt="{% blocktrans %}{{user}}'s picture{% endblocktrans %}" />
+                {{user.get_full_name}}
+            </a>
+            <div class="clearfix"></div>
+        </div>
+        {% endfor %}
+        <a class="btn panelbtn profile-friends-btn" href="{% url 'friends' %}">{% trans "See my friends" %}</a>
+        <a class="btn panelbtn profile-friends-btn" href="{% url 'refer' %}">{% trans "Invite new friends" %}</a>
+    </div>
+    {% else %}
+    <div>
+        <a class="btn panelbtn center-block" href="{% url 'index' %}">{% trans "Home" %}</a>
+    </div>
+    {% endif %}
+</div>
 
 <div class="col-sm-7 panel profile">
     <h3>{{profile.get_full_name}}</h3>
     <p>{{profile.phone|default:_("No phone number provided")}}</p>
-    <p>{% trans "Arrondissement" %} {{profile.groups.first}}</p>
-    <p>{% trans "District" %} {{profile.district}}</p>
-    <p>{% trans "School" %} {{profile.school}}</p>
+    <p>{% trans "Arrondissement" %}: <span class="value">{{profile.groups.first|default:_("None")}}</span></p>
+    <p>{% trans "District" %}: <span class="value">{{profile.district|default:_("None")}}</span></p>
+    <p>{% trans "School" %}: <span class="value">{{profile.school|default:_("None")}}</span></p>
     <p>
         <span class="number">{{profile.kidsnb|default:0}}</span>
         {% blocktrans count counter=profile.kidsnb|default:0 %}kid{% plural %}kids{% endblocktrans %}
     </p>
-    <p>{% trans "Usual bbsitter:" %} {{profile.bbsitter}}</p>
+    <p>{% trans "Usual bbsitter:" %} <span class="value">{{profile.bbsitter|default:_("None")}}</span></p>
     <p>
         <span class="number">{% if profile.ok_at_home %}OK{% else %}NOK{% endif %}</span>
         {% trans "to host a bbsitting" %}
@@ -32,7 +73,7 @@
     </p>
     <p>{% trans "Available equipment" %}</p>
     
-    <ul>{% for equipment in profile.equipment.all %}
+    <ul class="value">{% for equipment in profile.equipment.all %}
         <li>{{equipment.name}}</li>
     {% endfor %}</ul>
     
@@ -45,37 +86,6 @@
     </div>
     {% endif %}
 </div>
-<div class="col-sm-4 panel panel-margin">
-    <img class="profile" alt="{% blocktrans with name=profile.get_full_name%}{{name}}'s picture{% endblocktrans %} '" src="{{profile.picture.url}}" />
-</div>
 
-{% if profile == user %}
-<div class="col-sm-4 panel panel-margin">
-    <h3>{% trans "My group" %}</h3>
-    {% for user in user.friends.all|slice:":4" %}
-    <div class="userlist pull-left">
-        <a href="{% url 'profile' user.email %}">
-            <img class="userthumb" src="{{user.picture.url}}" alt="{% blocktrans %}{{user}}'s picture{% endblocktrans %}" />
-            {{user.get_full_name}}
-        </a>
-        <div class="clearfix"></div>
-    </div>
-    {% endfor %}
-    <a class="btn panelbtn profile-friends-btn" href="{% url 'friends' %}">{% trans "See my friends" %}</a>
-    <a class="btn panelbtn profile-friends-btn" href="{% url 'refer' %}">{% trans "Invite new friends" %}</a>
-</div>
-<div class="clearfix"></div>
-
-<div class="panel planning">
-    <h3><span class="glyphicon glyphicon-calendar"></span> {% trans "Your planned babysittings" %}</h3>
-    {% for bbsitting in profile.bbsitting_set.all %}
-        <p><a href="{% url 'detail' bbsitting.pk %}">{{bbsitting}}</a></p>
-    {% endfor %}
-    {% comment %}<input id="searchdate"/>
-    <button class="btn panelbtn" onclick="document.location = '/search/'+document.getElementById('searchdate').value">{% trans 'Search' %}</button>{% endcomment %}
-    <a class="btn panelbtn" href="{% url 'calendar' %}">{% trans "Calendar" %}</a>
-    <a class="btn panelbtn pull-right" href="{% url 'new' %}">{% trans "Propose a date" %}</a>
-</div>
-{% endif %}
 {% endwith %}
 {% endblock %}
