--- a/bbsittingsharing/static/css/bbsittingsharing.css
+++ b/bbsittingsharing/static/css/bbsittingsharing.css
@@ -25,7 +25,7 @@ html {
 body {
     font-family: "Gotham",Helvetica,Arial,sans-serif;
     color: #183c77;
-    margin-bottom: 190px;
+    margin-bottom: 130px;
     background-color: #f2f0ed;
 }
 #tasdanimaux {
@@ -37,11 +37,11 @@ body {
 }
 #tasdanimaux.scrolled {
     position: fixed;
-    top: 0;
+    top: -350px;
 }
 header {
     height: 140px;
-    padding: 2em;
+    padding: 1em;
     margin-bottom: 2em;
     background: white;
 }
@@ -63,7 +63,9 @@ header h1 a {
 }
 header nav {
     float: right;
+    margin: 1em;
     font-weight: bold;
+    font-size: 110%;
 }
 header nav ul {
     list-style-type: none;
@@ -72,18 +74,19 @@ header nav ul {
 #pagetitle {
     position: relative;
     margin: 1em auto;
-    padding: .7em;
+    padding: 2em;
     background: #67acf2;
     border-radius: 10px;
     color: white;
     text-align: center;
-    font-size: 1.5em;
     font-weight: bold;
 }
 #pagetitle .btn {
     background: white;
-    margin: 1.5em;
-    width: 8em;
+    width: 10em;
+    margin: 1em 3em;
+    padding: .7em;
+    color: #183c77;
 }
 #pagetitle nav {
     width: 100%;
@@ -99,8 +102,8 @@ footer {
     position: absolute;
     bottom: 0px;
     width: 100%;
-    height: 160px;
-    padding: 5em;
+    height: 100px;
+    padding: 2.5em;
     background: #67acf2;
     color: white;
     text-transform: uppercase;
@@ -116,6 +119,16 @@ footer ul {
 }
 footer a {
     color: white;
+}
+
+form {
+    margin: 0 -15px;
+}
+label {
+    margin-left: 2em;
+}
+.btn-group {
+    margin-left: 1em;
 }
 
 .btn-checkbox {
@@ -140,28 +153,37 @@ footer a {
     width: 12em;
     background: #fc5151;
     border-bottom: 5px solid #cc3636;
-    margin: 1em;
-    padding: .7em 1em;
+    padding: .7em 1.2em;
     color: white;
-    font-size: 1.2em;
+}
+.panelbtn:hover {
+    background: #cc3636;
+    color: white;
 }
 .profile p, .planning p {
-    margin: 1em;
-    padding: 1em 0;
+    padding: 2em 0 0;
+    height: 5em;
     border-top: solid #E8E8E8 1px;
 }
 .panel .number {
     font-size: 2em;
     color: #fc5151;
+    vertical-align: -5px;
 }
-.panel .glyphicon-calendar {
-    color: #F2F0ED;
+.panel .value {
+    color: #67acf2;
+}
+.panel .calendar-icon {
+    width: 20px;
 }
 .date-search-results .glyphicon {
     color: #fc5151;
 }
 .panel-margin {
     margin: 0 0 2em 2em;
+}
+.panel-margin h3{
+    margin-top: 0;
 }
 .panel-center {
     float: none;
@@ -186,6 +208,8 @@ footer a {
     margin: 0 1em;
 }
 .terms p {
+    margin: 1em;
+    text-align: justify;
     font-weight: lighter;
 }
 
@@ -206,9 +230,9 @@ td.search-result .result-details {
 }
 img.parents {
     position: absolute;
-    height: 200px;
-    right: -120px;
-    top: 40px;
+    height: 250px;
+    right: -160px;
+    top: 30px;
 }
 #info {
     margin: 4em auto 0 auto;
@@ -228,7 +252,6 @@ img.parents {
 }
 .friends-col {
     margin-top: 1em;
-    border: solid #f2f0ed;
 }
 .friends-btn {
     margin: 1em;
@@ -249,7 +272,7 @@ img.parents {
     font-style: oblique;
 }
 
-label[for=id_bbsitter]::before {
+#bbsitting-form label[for=id_bbsitter]::before {
     content: "✉";
     position: relative;
     top: 5px;
@@ -263,14 +286,13 @@ label[for=id_bbsitter]::before {
 }
 
 img.profile {
-    max-width: 90%;
+    max-width: 100%;
 }
 .page-help {
     width: 80%;
     margin: 1em auto;
     padding: 1em;
     text-align: center;
-    font-size: .8em;
     font-style: oblique;
 }
 .userlist {
@@ -282,7 +304,9 @@ img.profile {
 }
 .userthumb {
     float: left;
-    height: 3em;
+    height: 30px;
+    width: 30px;
+    border-radius: 15px;
 }
 
 /* Calendar customization */
@@ -306,6 +330,15 @@ img.profile {
     background: #f2f0ed;
     box-shadow: 3px 3px 5px #8c8c8c;
 }
+.fc-left {
+    width: 100%;
+}
+.fc-left h2 {
+    width: 100%;
+    text-align: center;
+    font-size: 1.5em;
+    text-transform: capitalize;
+}
 .calendar-arrow {
     position: absolute;
     top: 50%;
@@ -325,7 +358,7 @@ img.profile {
 }
 .calendar-day.booked {
     position: relative;
-    top: -10px;
+    top: 6px;
     left: 10px;
     background: url('/static/goutterouge.png') no-repeat;
     background-size: 24px 32px;
@@ -335,7 +368,7 @@ img.profile {
     color: white;
 }
 .calendar-day.other-month a {
-    color: #8c8c8c;
+    color: #f2f0ed;
 }
 .calendar-day .detail {
     display: none;
@@ -344,8 +377,10 @@ img.profile {
 .calendar-day.booked:hover {
     width: 40px;
     height: 52px;
+    top: 0;
+    left: 0;
     background-size: 40px 56px;
-    transition-property: width, height, background-size;
+    transition-property: width, height, top, left, background-size;
     transition-duration: .1s;
 }
 .calendar-day.booked:hover .detail {
