--- a/bbsittingsharing/templates/registration/registration_form.html
+++ b/bbsittingsharing/templates/registration/registration_form.html
@@ -7,6 +7,8 @@
 <form method="post">
     {% csrf_token %}
     {{form|bootstrap}}
+    <div class="clearfix"></div>
     <input type="submit" class="btn panelbtn pull-right" />
+    <a href="{% url 'index' %}" class="btn panelbtn">{% trans "Home" %}</a>
 </form>
 {% endblock %}
