feature: refer with facebook

--- a/bbsittingsharing/templates/base.html
+++ b/bbsittingsharing/templates/base.html
@@ -4,6 +4,9 @@
 <html>
     <head>
         <title>Baby Sitting sharing</title>
+        <meta property="og:title" content="Baby Sitting sharing" />
+        <meta property="og:image" content="{% static 'tasdanimaux.png' %}" />
+        <meta property="og:description" content="{% trans 'Share baby-sittings with other parents' %}" />
         <link rel='stylesheet' href='{% static "css/fullcalendar.css" %}' />
         <link rel='stylesheet' href='{% static "css/bootstrap.css" %}' />
         <link rel='stylesheet' href='{% static "css/bootstrap-theme.css" %}' />
