--- a/bbsittingsharing/templates/bbsittingsharing/refer.html
+++ b/bbsittingsharing/templates/bbsittingsharing/refer.html
@@ -14,4 +14,6 @@
         <div class="clearfix"></div>
     </form>
 </div>
+{% trans 'or' %}
+<a class="btn panelbtn" href="https://www.facebook.com/dialog/send?app_id=1606386862970335&display=popup&caption={% trans 'Share your Baby sittings!' %}&link=http%3A%2F%2F{{ request.META.HTTP_HOST }}{% url 'registration_register' %}%3Freferer%3D{{user.email}}&redirect_uri=http%3A%2F%2F{{ request.META.HTTP_HOST }}{% url 'refer' %}">{% trans 'Refer with facebook' %}</a>
 {% endblock %}
