update: new home image

--- a/bbsittingsharing/templates/info.html
+++ b/bbsittingsharing/templates/info.html
@@ -13,7 +13,7 @@
         </ul>
     </nav>
 </div>
-<div style="background: none repeat scroll 0% 0% gray; height: 450px; width: 720px; margin: auto;padding: 270px">Vidéo en construction</div>
+<img src="{% static 'home.png' %}" width="720" />
 <div id="info">
     <div class="col-sm-6">
         <h4>{% trans "Who are we?" %}</h4>
