Suppression du lorem ispum sur la page d'accueil

--- a/bbsittingsharing/templates/info.html
+++ b/bbsittingsharing/templates/info.html
@@ -17,15 +17,11 @@
 <div id="info">
     <div class="col-sm-6">
         <h4>{% trans "Who are we?" %}</h4>
-         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor erat, fermentum eget nibh eget, vehicula mollis lectus. Praesent tristique libero nec diam aliquet volutpat. Integer rhoncus sapien ut tempor malesuada. Aenean bibendum dui quam, eget bibendum sapien posuere eget. Phasellus non ante congue, egestas ligula a, facilisis ex. Etiam sed leo porttitor, finibus magna ac, venenatis nisl. Aliquam lobortis venenatis urna, semper accumsan nibh imperdiet non. Proin cursus efficitur nunc, eu laoreet orci condimentum vitae. Curabitur vel vestibulum dui. Sed justo metus, commodo eget interdum fringilla, hendrerit vel nulla. Nunc non lorem sed velit facilisis ultricies vitae eu velit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla luctus ipsum quis mattis elementum.
-
-    Etiam eget sapien auctor, bibendum augue ut, ultrices nisi. Nam in sapien in ante elementum egestas. Vestibulum id libero ac lectus ultrices feugiat eget vel massa. Sed nec turpis eget urna sodales ultrices sed nec sem. Sed ac erat orci. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed dictum vulputate purus. Nulla non egestas purus. Nullam eget molestie ipsum, nec placerat felis.
+        Les conditions générales sont à écrire. AU BOULOT LOLO
     </div>
     <div class="col-sm-6">
         <h4>{% trans "Keep cool" %}</h4>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pharetra, nulla ut porttitor congue, nibh velit commodo diam, at varius nisi ex quis purus. Morbi rhoncus, diam at rhoncus placerat, eros dui lobortis felis, in efficitur lacus odio sit amet felis. Mauris in vulputate sem, id consequat nibh. Duis sit amet tellus libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed accumsan congue erat ac blandit. Quisque eu odio porttitor, sollicitudin tellus ac, egestas mi. Ut sodales dui quam, non laoreet nulla dignissim ut. Nulla facilisi. Sed in vulputate est.
-
-    Ut nunc neque, iaculis at dapibus vitae, laoreet in mi. Duis vitae massa ultricies, pellentesque ligula at, condimentum lacus. Nulla ex dolor, vehicula vitae nisl ac, euismod ultricies elit. Suspendisse suscipit mauris eu venenatis accumsan. Aliquam venenatis egestas nulla, cursus malesuada est maximus at. Nullam molestie consequat dapibus. In porttitor lectus sed mi aliquam facilisis. Duis tortor nisi, condimentum id libero id, bibendum cursus sapien. Vestibulum non massa mauris. Aenean eu lorem id tortor cursus luctus nec quis justo. Praesent consectetur ipsum lacus, et gravida nibh luctus non. Cras pretium felis mi, sed pulvinar nunc volutpat nec. Vivamus orci nulla, placerat eget felis id, semper vehicula lacus. 
+        Au boulot !!!!
     </div>
 </div>
 {% endblock %}
